[gd_scene load_steps=8 format=2]

[ext_resource path="res://Settings_Menu.gd" type="Script" id=1]
[ext_resource path="res://Art/story_panel.png" type="Texture" id=2]
[ext_resource path="res://bitpap/BitPap.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/close_b_unpressed.png" type="Texture" id=4]
[ext_resource path="res://Art/close_b_hightlight.png" type="Texture" id=5]
[ext_resource path="res://Art/close_b_pressedt.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0.145098, 0.188235, 0.34902, 1 )
font_data = ExtResource( 3 )

[node name="Settings_Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 45.3333
margin_top = -120.0
margin_right = 241.333
margin_bottom = 44.0
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 2 )

[node name="Music_Volume" type="HSlider" parent="."]
margin_left = 608.333
margin_top = 286.333
margin_right = 967.333
margin_bottom = 302.333
rect_scale = Vector2( 1, 2 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="Main_Volume" type="HSlider" parent="."]
margin_left = 608.333
margin_top = 191.0
margin_right = 967.333
margin_bottom = 207.0
rect_scale = Vector2( 1, 2 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="SFX_Volume" type="HSlider" parent="."]
margin_left = 609.333
margin_top = 376.333
margin_right = 967.333
margin_bottom = 392.333
rect_scale = Vector2( 1, 2 )
max_value = 1.0
step = 0.0
value = 1.0

[node name="Label" type="Label" parent="."]
margin_left = 332.333
margin_top = 183.0
margin_right = 398.333
margin_bottom = 199.0
custom_fonts/font = SubResource( 1 )
text = "Main Volume"

[node name="Label2" type="Label" parent="."]
margin_left = 322.333
margin_top = 279.333
margin_right = 551.333
margin_bottom = 330.333
custom_fonts/font = SubResource( 1 )
text = "Music Volume"

[node name="Label3" type="Label" parent="."]
margin_left = 338.333
margin_top = 369.333
margin_right = 530.333
margin_bottom = 420.333
custom_fonts/font = SubResource( 1 )
text = "SFX Volume"

[node name="Label4" type="Label" parent="."]
margin_left = 356.0
margin_top = 468.0
margin_right = 542.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 1 )
text = "Full Screen"

[node name="Label5" type="Label" parent="."]
margin_left = 652.667
margin_top = 469.334
margin_right = 809.667
margin_bottom = 520.334
custom_fonts/font = SubResource( 1 )
text = "Windowed"

[node name="Label6" type="Label" parent="."]
margin_left = 547.333
margin_top = 98.6667
margin_right = 685.333
margin_bottom = 149.667
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
uppercase = true

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 559.0
margin_top = 454.667
margin_right = 583.0
margin_bottom = 478.667
rect_scale = Vector2( 3, 3 )

[node name="CheckBox2" type="CheckBox" parent="."]
margin_left = 833.0
margin_top = 454.667
margin_right = 857.0
margin_bottom = 478.667
rect_scale = Vector2( 3, 3 )

[node name="Label7" type="Label" parent="."]
margin_left = 703.333
margin_top = 554.667
margin_right = 810.333
margin_bottom = 605.667
custom_fonts/font = SubResource( 1 )
text = "Casual"

[node name="CheckBox3" type="CheckBox" parent="."]
margin_left = 833.333
margin_top = 542.667
margin_right = 857.333
margin_bottom = 566.667
rect_scale = Vector2( 3, 3 )

[node name="Close_Settings_Button" type="TextureButton" parent="."]
margin_left = 942.0
margin_top = 90.0
margin_right = 967.0
margin_bottom = 104.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[connection signal="value_changed" from="Music_Volume" to="." method="_on_Music_Volume_value_changed"]
[connection signal="value_changed" from="Main_Volume" to="." method="_on_Main_Volume_value_changed"]
[connection signal="changed" from="SFX_Volume" to="." method="_on_SFX_Volume_changed"]
[connection signal="value_changed" from="SFX_Volume" to="." method="_on_SFX_Volume_value_changed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="CheckBox3" to="." method="_on_CheckBox3_pressed"]
[connection signal="toggled" from="CheckBox3" to="." method="_on_CheckBox3_toggled"]
[connection signal="button_down" from="Close_Settings_Button" to="." method="_on_Close_Settings_Button_button_down"]
[connection signal="mouse_entered" from="Close_Settings_Button" to="." method="_on_Close_Settings_Button_mouse_entered"]
[connection signal="pressed" from="Close_Settings_Button" to="." method="_on_Close_Settings_Button_pressed"]
